Move the 'Exit session' button to the most left side in the system tray.

BUG=657211
TEST=Using Linux,
- Launch chrome with --ash-enable-palette-on-all-displays --ash-enable-palette --login-manager flags.
- Login to public session.
- Enable on-screen keyboard.
- Observe that the exit session button is on the most left side in the system tray.
- Observe that the popup shown on clicking stylus icon is aligned with the icon.
  This is also confirmed on normal session.

Review-Url: https://codereview.chromium.org/2427313003
Cr-Commit-Position: refs/heads/master@{#431461}

Former-commit-id: 27f807d9af888c9db6236fd2adbb692112dcbd44